--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "sass": "^1.71.1",
     "typewriter-effect": "^2.21.0"
   },
