--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-paystack": "^5.0.0",
+    "react-slick": "^0.30.2",
     "sass": "^1.71.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.21.0"
@@ -36,6 +38,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
