--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.359.0",
     "next": "14.1.0",
+    "postcss-import": "^16.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
