--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
-    "@react-pdf/renderer": "^3.4.4",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
@@ -29,6 +28,7 @@
     "react-paginate": "^8.2.0",
     "react-paystack": "^5.0.0",
     "react-slick": "^0.30.2",
+    "react-to-pdf": "^1.0.1",
     "sass": "^1.71.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.2",
