--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-paystack": "^5.0.0",
     "react-slick": "^0.30.2",
     "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.15.1",
     "sass": "^1.71.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.2.2",
