--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-paystack": "^5.0.0",
+    "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.15.1",
