--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ NEXT_PUBLIC_EXCHANGE_RATE_KEY=987cb8d182d898c61fd15594
 NEXT_MAIL_TRAP_TOKEN=475682ae4f9b61ca41c6cc2a67fd689a
 NEXT_CUSTOMER_EMAIL_TEMPLATE_ID=8d3c34e8-f9bb-44a2-a314-3ad82e7b934d
 NEXT_ORDER_EMAIL_TEMPLATE_ID=3f946333-c0f8-407d-8b84-057a17b7ee29
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dggsagtrj
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=l2naprkz
