--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.359.0",
     "mailtrap": "^3.3.0",
     "next": "14.1.0",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
