--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ NEXT_THEASSEMBLE_TEMPLATE_ID=fe90be9d-4b2f-410d-ae2c-04d64f6bb0a2
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dggsagtrj
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=l2naprkz
+
+NEXT_PUBLIC_POSTHOG_KEY=phc_e2kXPv6uHAbApvqqhue4mUvrCN7d4gj4OMk3dOfCh9y
+NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
