--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mailtrap": "^3.3.0",
     "next": "14.1.0",
     "next-cloudinary": "^6.6.2",
+    "posthog-js": "^1.257.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
