--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-cloudinary": "^6.6.2",
     "posthog-js": "^1.257.0",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
