--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "js-cookie": "^3.0.5",
+    "loops": "^5.0.1",
     "lucide-react": "^0.359.0",
     "mailtrap": "^3.3.0",
     "next": "14.1.0",
