--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.1",
